# memory-viewers

./: .gitignore  .gitmodules  AGENTS.md  README.md  rule-targets.yaml
doc-viewer/: Cargo.toml  README.md  install.ps1  install.sh
doc-viewer/agents/docs/: README.md  index.yaml
doc-viewer/agents/docs/git/: index.yaml
doc-viewer/agents/docs/main/: index.yaml
doc-viewer/agents/docs/parser/: index.yaml
doc-viewer/agents/docs/schema/: index.yaml
doc-viewer/agents/docs/templates/: index.yaml
doc-viewer/agents/docs/tools/: index.yaml
doc-viewer/e2e/: package-lock.json  package.json  playwright.managed.config.ts  tsconfig.json
doc-viewer/e2e/tests-managed/: doc-viewer.generated-docs.spec.ts  doc-viewer.shared.spec.ts
doc-viewer/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
doc-viewer/frontend/dioxus/: Cargo.toml  Trunk.toml  index.html
doc-viewer/frontend/dioxus/public/: doc-viewer-overrides.css
doc-viewer/frontend/dioxus/src/: api.rs  app.rs  main.rs  types.rs
doc-viewer/frontend/src/: App.tsx  api.ts  cache.ts  gpu-schema.ts  main.tsx  store.ts  theme.ts  types.ts
doc-viewer/frontend/src/components/: Breadcrumbs.tsx  CategoryPage.tsx  DocViewer.tsx  DocumentTabs.tsx  FileViewer.tsx  FilterPanel.tsx  Header.tsx  Sidebar.tsx
doc-viewer/frontend/src/styles/: base.css  category-page.css  doc-viewer.css  filter-panel.css  index.css  layout.css  tabs.css  tree.css  variables.css
doc-viewer/src/: git.rs  helpers.rs  http.rs  http_server.rs  main.rs  markdown_ast.rs  parser.rs  query.rs  schema.rs  templates.rs
doc-viewer/src/mcp/: inputs.rs  mod.rs
doc-viewer/src/tools/: agents.rs  agents_types.rs  crates.rs  mod.rs
doc-viewer/src/tools/crates/: crates_sync.rs
doc-viewer/static/: index.html
doc-viewer/static/assets/: index-6kMlskwW.css  index-DRfOPgK9.js
log-viewer/: Cargo.toml  README.md  log-viewer.toml  log-viewer.toml.example
log-viewer/agents/docs/: README.md  index.yaml
log-viewer/agents/docs/config/: index.yaml
log-viewer/agents/docs/handlers/: index.yaml
log-viewer/agents/docs/log_parser/: index.yaml
log-viewer/agents/docs/main/: index.yaml
log-viewer/agents/docs/mcp_server/: index.yaml
log-viewer/agents/docs/query/: index.yaml
log-viewer/agents/docs/router/: index.yaml
log-viewer/agents/docs/source/: index.yaml
log-viewer/agents/docs/state/: index.yaml
log-viewer/e2e/: package.json  playwright.config.ts  playwright.managed.config.ts  tsconfig.json
log-viewer/e2e/tests/: theme-and-readability.spec.ts
log-viewer/e2e/tests-managed/: log-viewer.shared.spec.ts
log-viewer/e2e/tests/helpers/: contrast.ts
log-viewer/frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
log-viewer/frontend/dioxus/: Cargo.toml  Trunk.toml  index.html
log-viewer/frontend/dioxus/public/: log-viewer-overrides.css
log-viewer/frontend/dioxus/src/: api.rs  app.rs  main.rs  types.rs
log-viewer/frontend/src/: App.tsx  gpu-schema.ts  vite-env.d.ts
log-viewer/frontend/src/api/: index.ts  live.ts  static.ts
log-viewer/frontend/src/components/: Icons.tsx
log-viewer/frontend/src/effects/: palette.wgsl  particle-shading.wgsl
log-viewer/frontend/src/hooks/: index.ts  useGlobalKeyboard.ts  useListKeyboard.ts  useSourceSnippet.ts
log-viewer/frontend/src/search-path/: edge-highlighting.test.ts  edge-highlighting.ts  test-fixtures.json
log-viewer/frontend/src/store/: fileTree.ts  index.ts  replay-envelope.test.ts  theme.ts
log-viewer/frontend/src/styles/: base.css  buttons.css  code-snippet.css  code-viewer.css  depth-gutter.css  effects-debug.css  entry-content.css  fields.css  file-tree.css  filter-panel.css  flow-graph.css  header.css  index.css  json-viewer.css  layout.css  log-entries.css  log-viewer.css  panic.css  prism.css  rust-value.css  stats.css  utilities.css  variables.css
log-viewer/frontend/src/types/: index.ts  wgsl.d.ts
log-viewer/frontend/viewer-api-frontend/: package-lock.json  package.json  tsconfig.json
log-viewer/frontend/viewer-api-frontend/src/: index.ts  session.ts  url-state.ts
log-viewer/src/: config.rs  handlers.rs  log_parser.rs  main.rs  mcp_server.rs  query.rs  router.rs  source.rs  state.rs  types.rs
log-viewer/static/: index.html
log-viewer/static/assets/: index-CripbibC.js  index-HC8taw3g.css
spec-viewer/: Cargo.toml
spec-viewer/frontend/dioxus/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  playwright.release.config.ts
spec-viewer/frontend/dioxus/e2e-release/: detail-route.spec.ts  graph-selection.spec.ts  navigation.spec.ts  root-browse-route.spec.ts  spec-viewer.release.spec.ts  tracing.release.spec.ts  view-preservation.spec.ts  viewer-api-primitives.spec.ts
spec-viewer/frontend/dioxus/public/: spec-viewer-overrides.css
spec-viewer/frontend/dioxus/src/: api.rs  main.rs  routes.rs  sse.rs  store.rs  types.rs
spec-viewer/src/: main.rs
ticket-viewer/: Cargo.toml
ticket-viewer/frontend/dioxus/: Cargo.toml  index.html  playwright.config.ts  playwright.edge-temp.config.ts  playwright.external.config.ts  playwright.release.config.ts
ticket-viewer/frontend/dioxus/e2e/: workspace-offline-route.spec.ts  workspace-picker-page.spec.ts
ticket-viewer/frontend/dioxus/e2e-release/: graph-detail-sidebar.spec.ts  graph-edge-overlay-shape.spec.ts  graph3d-fetch-error.spec.ts  graph3d-right-drag.spec.ts  keyboard-navigation.spec.ts  live-refresh-authority.spec.ts  mixed-workspace-root-route.spec.ts  search-id-substring.spec.ts  sidebar-query-state-filter.spec.ts  ticket-viewer.release.spec.ts  tracing.release.spec.ts  workflow-sidebar.spec.ts
ticket-viewer/frontend/dioxus/public/: ticket-viewer-overrides.css
ticket-viewer/frontend/dioxus/src/: api.rs  graph3d.rs  graph_fetch.rs  layout.rs  main.rs  routes.rs  search_syntax.rs  sse.rs  store.rs  types.rs
ticket-viewer/src/: main.rs
ticket-viewer/tests/: graph_reactivity.rs  workspace_resolution.rs
tools/viewer/ticket-viewer/: Cargo.toml
tools/viewer/ticket-viewer/dioxus-frontend/: Cargo.toml  (+2 more)
(+837 files in other folders)
