[package]
name = "log-viewer"
version = "0.1.0"
edition = "2021"
description = "HTTP server and frontend for viewing tracing logs"

[[bin]]
name = "log-viewer"
path = "src/main.rs"

[dependencies]
# Shared viewer infrastructure
viewer-api = { path = "../../viewer-api/viewer-api", features = ["ts-gen"] }

# App-specific
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
toml = "0.8"
once_cell = "1"

# HTTP client for fetching remote source files (deployed environment)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Tracing (needed for #[instrument] proc macro)
tracing = "0.1"

# TypeScript type generation
ts-rs = { version = "10", features = ["serde-json-impl"] }

# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io"] }

[dev-dependencies]
axum-test = "19"
tempfile = "3"
