[package]
name = "ticket-viewer"
version = "0.1.0"
edition = "2021"
description = "HTTP server and SPA frontend for viewing and navigating the ticket graph"

[[bin]]
name = "ticket-viewer"
path = "src/main.rs"

[dependencies]
# Ticket crates
ticket-api = { path = "../../memory-api/crates/ticket-api" }
ticket-http = { path = "../../memory-api/tools/http/ticket-http" }

# Shared viewer infrastructure
viewer-api = { path = "../../viewer-api/viewer-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
