[package]
name = "ticket-viewer-dioxus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ticket-viewer-dioxus"
path = "src/main.rs"

[dependencies]
# Dioxus platform
dioxus = { version = "0.7", features = ["web", "router"] }

# Shared viewer-api platform shell (WebGPU canvas + overlay layout)
viewer-api-dioxus = { path = "../../../viewer-api/frontend/dioxus" }

# HTTP client for the browser fetch API
gloo-net = { version = "0.6", features = ["http"] }

# Safe DOM event listener management (auto-removes on drop, no Closure::forget)
gloo-events = "0.2"

# Async support
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

# Web platform APIs for canvas drawing, SSE, and WebGPU 3-D graph
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "EventTarget",
    "EventSource",
    "MessageEvent",
    "MouseEvent",
    "WheelEvent",
    "DomRect",
    "KeyboardEvent",
    "console",
    # Performance timer (camera animation time)
    "Performance",
    # Navigator.gpu — WebGPU entry-point
    "Navigator",
    "Gpu",
    # WebGPU core device types
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    # WebGPU canvas
    "GpuCanvasContext",
    "GpuCanvasConfiguration",
    "GpuTextureFormat",
    # WebGPU resources
    "GpuBuffer",
    "GpuBufferDescriptor",
    "GpuTexture",
    "GpuTextureView",
    "GpuTextureDescriptor",
    # WebGPU shaders
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    # WebGPU pipeline layout & bind groups
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    # WebGPU render pipeline
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    # WebGPU command encoding & render pass
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCommandBuffer",
    "GpuRenderPassEncoder",
    "GpuRenderPassDescriptor",
] }

# Serialization — matches the ticket-http REST responses
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL encoding for building query strings
percent-encoding = "2"

# Logging in WASM
tracing = "0.1"
tracing-wasm = "0.2"
